--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,86 @@
-body {
-  font-family: "Montserrat", serif;
+:root {
+  --primary-color: #2e94b9;
+  --secondary-color: #f0fbff;
+  --text-color: #475053;
+  --third-color: #acdcee;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Montserrat", serif;
+  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Playfair Display", serif;
+.hero {
+  background-color: var(--secondary-color);
+  padding: 160px 20px;
+}
+body {
+  text-align: center;
+  color: var(--text-color);
+}
+h1 {
+  font-family: var(--heading-font-family);
+  font-size: 80px;
+}
+.hero p {
+  font-size: 40px;
+}
+.hero h2 {
+  font-size: 20px;
+  line-height: 2;
+}
+.btn-branding {
+  background: var(--primary-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  margin-top: 40px;
+}
+.btn-branding-outline {
+  border: 1px solid var(--primary-color);
+  background-color: var(--secondary-color);
+  border-radius: 4px;
+  color: var(--primary-color);
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.project-description {
+  padding: 80px 30px;
+}
+
+@media (max-width: 960px) {
+  h1 {
+    font-size: 40px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 4535;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  .project-description {
+    padding: 0;
+  }
+  .hero p {
+    font-size: 20px;
+  }
+  .hero h2 {
+    font-size: 20px;
+    line-height: 2;
+  }
+  h2 {
+    text-align: center;
+  }
+  p {
+    margin-bottom: 5px;
+  }
+}
+.project-image {
+  padding: 40px;
+  background-color: var(--secondary-color);
+  border-radius: 4px;
+  border: 1px solid var(--third-color);
+  box-shadow: var(--box-shadow);
 }
