--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ h1 {
   line-height: 27px;
   padding: 15px 30px;
   margin-top: 40px;
+  box-shadow: var(--box-shadow);
 }
 .btn-branding-outline {
   border: 1px solid var(--primary-color);
@@ -44,6 +45,7 @@ h1 {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+  box-shadow: var(--box-shadow);
 }
 .project-description {
   padding: 80px 30px;
@@ -81,6 +83,11 @@ h1 {
   padding: 40px;
   background-color: var(--secondary-color);
   border-radius: 4px;
+  border: 1px solid var(--third-color);
+  box-shadow: var(--box-shadow);
+}
+
+img {
   border: 1px solid var(--third-color);
   box-shadow: var(--box-shadow);
 }
