--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,10 @@
 .hero {
   background-color: var(--secondary-color);
   padding: 160px 20px;
+  box-shadow: var(--box-shadow);
+  border: 1px solid var(--primary-color);
+  margin: 45px;
+  border-radius: 4px;
 }
 body {
   text-align: center;
