--- a/styles/style.css
+++ b/styles/style.css
@@ -7,23 +7,61 @@
   --default-font-family: "Montserrat", serif;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
+h1 {
+  font-family: var(--heading-font-family);
+  font-size: 80px;
+}
 
+h4 {
+  font-size: 36px;
+}
+nav {
+  padding: 20px;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 45px;
+  margin: 0 10px;
+}
+
+.logo {
+  max-height: 50px;
+  box-shadow: none;
+  border: none;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+nav a:hover,
+nav li.active a {
+  color: var(--primary-color);
+}
+
+i {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 50px;
+  margin: 20px;
+}
 .hero {
   background-color: var(--secondary-color);
-  padding: 160px 20px;
-  box-shadow: var(--box-shadow);
-  border: 1px solid var(--primary-color);
-  margin: 45px;
-  border-radius: 4px;
+  padding: 80px 20px;
+  margin-bottom: 40px;
 }
 body {
   text-align: center;
   color: var(--text-color);
 }
-h1 {
-  font-family: var(--heading-font-family);
-  font-size: 80px;
-}
+
 .hero p {
   font-size: 40px;
 }
@@ -54,7 +92,43 @@ h1 {
 .project-description {
   padding: 80px 30px;
 }
-
+img {
+  border: 1px solid var(--third-color);
+  box-shadow: var(--box-shadow);
+}
+.project-image {
+  padding: 40px;
+  background-color: var(--secondary-color);
+  border-radius: 4px;
+  border: 1px solid var(--third-color);
+  box-shadow: var(--box-shadow);
+}
+footer .email-link {
+  text-align: center;
+  color: #272142;
+  text-decoration: none;
+  font-size: 24px;
+  transition: all 100ms ease-in-out;
+}
+footer .email-link:hover {
+  color: var(--primary-color);
+}
+.contact-box {
+  background-color: var(--secondary-color);
+  padding: 49px 119px 30px 119px;
+  border-radius: 20px;
+}
+.contact-box p {
+  font-size: 18px;
+  line-height: 27px;
+}
+.code {
+  font-size: 14px;
+}
+.code-link {
+  color: var(--primary-color);
+  text-decoration: none;
+}
 @media (max-width: 960px) {
   h1 {
     font-size: 40px;
@@ -82,16 +156,4 @@ h1 {
   p {
     margin-bottom: 5px;
   }
-}
-.project-image {
-  padding: 40px;
-  background-color: var(--secondary-color);
-  border-radius: 4px;
-  border: 1px solid var(--third-color);
-  box-shadow: var(--box-shadow);
-}
-
-img {
-  border: 1px solid var(--third-color);
-  box-shadow: var(--box-shadow);
 }
