--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,15 @@ h1 {
   font-family: var(--heading-font-family);
   font-size: 80px;
 }
+h2 {
+  font-size: 64px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 2;
+}
+h3 {
+  font-size: 48px;
+}
 
 h4 {
   font-size: 36px;
@@ -65,10 +74,7 @@ body {
 .hero p {
   font-size: 40px;
 }
-.hero h2 {
-  font-size: 20px;
-  line-height: 2;
-}
+
 .btn-branding {
   background: var(--primary-color);
   border-radius: 4px;
@@ -134,13 +140,7 @@ footer .email-link:hover {
 
   line-height: 85px;
 }
-h2 {
-  font-size: 64px;
-  font-weight: bold;
-}
-h4 {
-  font-size: 48px;
-}
+
 .content-conteiner {
   padding: 60px 20px;
 }
@@ -167,14 +167,17 @@ h4 {
   border-radius: 20px;
   max-height: 500px;
 }
+.Certificate {
+  max-width: 500px;
+}
 @media (max-width: 960px) {
   h1 {
     font-size: 40px;
     line-height: 1.5;
   }
-  h2 {
-    font-size: 4535;
-  }
+  .content-conteiner h1 {
+  font-size: 40px;
+
   .hero {
     padding: 80px 20px;
   }
@@ -184,14 +187,17 @@ h4 {
   .hero p {
     font-size: 20px;
   }
-  .hero h2 {
-    font-size: 20px;
-    line-height: 2;
+  h3 {
+    font-size: 24px;
   }
   h2 {
     text-align: center;
+    line-height: 2;
   }
   p {
     margin-bottom: 5px;
+  }
+  .Certificate{
+    max-width: 100px;
   }
 }
