--- a/styles/style.css
+++ b/styles/style.css
@@ -176,7 +176,9 @@ footer .email-link:hover {
     line-height: 1.5;
   }
   .content-conteiner h1 {
-  font-size: 40px;
+    font-size: 40px;
+    line-height: 1.5;
+  }
 
   .hero {
     padding: 80px 20px;
@@ -197,7 +199,7 @@ footer .email-link:hover {
   p {
     margin-bottom: 5px;
   }
-  .Certificate{
+  .Certificate {
     max-width: 100px;
   }
 }
