--- a/styles/style.css
+++ b/styles/style.css
@@ -189,6 +189,10 @@ footer .email-link:hover {
   font-size: 18px;
   text-decoration: none;
 }
+.contact-greeting {
+  background-color: var(--secondary-color);
+  border-radius: 20px;
+}
 @media (max-width: 960px) {
   h1 {
     font-size: 40px;
